Bug 94995 - [BAT BYT] NULL pointer dereference in intel_pipe_will_have_type() triggered from vlv_compute_dpll()
Summary: [BAT BYT] NULL pointer dereference in intel_pipe_will_have_type() triggered f...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) All
: medium critical
Assignee: Ville Syrjala
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-18 16:43 UTC by Marius Vlad
Modified: 2017-07-24 22:42 UTC (History)
1 user (show)

See Also:
i915 platform: BYT
i915 features: display/DSI


Attachments
stacktrace (7.03 KB, text/plain)
2016-04-18 16:43 UTC, Marius Vlad
no flags Details

Description Marius Vlad 2016-04-18 16:43:55 UTC
Created attachment 123030 [details]
stacktrace

Reloading the module (tests/drv_module_reload) causes a NULL pointer dereference on BYT. 

The culprit seems to be:

cd2d34d drm/i915: Setup DPLL/DPLLMD for DSI too on VLV/CHV

Check quickly and it seems that crtc_state->base.state is NULL when reloading the driver.

From the following integration manifest:
e51a1e3 drm-intel-nightly: 2016y-04m-15d-13h-26m-14s UTC integration manifest
234126c drm/i915: Reject 'Center' scaling mode for eDP/DSI on GMCH platforms
f4ee265 drm/i915: Hook up pfit for DSI
062efa5 drm/i915: Eliminate {vlv,bxt}_configure_dsi_pll()
47eacba drm/i915: Compute DSI PLL parameters during .compute_config()
cd2d34d drm/i915: Setup DPLL/DPLLMD for DSI too on VLV/CHV
da6110b drm/i915/bxt: PORT_PLL_REF_SEL bit should be set for all BXT variations
ab24353 drm-intel-nightly: 2016y-04m-15d-13h-02m-57s UTC integration manifest


Tried w/:

commit b1acc63c4301f12ef2ca31872d937641aaf3c9dc
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Mon Apr 18 18:56:14 2016 +0300

    drm-intel-nightly: 2016y-04m-18d-15h-55m-43s UTC integration manifest
Comment 1 Marius Vlad 2016-04-19 10:00:58 UTC
Ville posted a patch 
https://lists.freedesktop.org/archives/intel-gfx/2016-April/092900.html.
Comment 2 Jani Nikula 2016-04-19 13:34:06 UTC
(In reply to Marius Vlad from comment #1)
> Ville posted a patch 
> https://lists.freedesktop.org/archives/intel-gfx/2016-April/092900.html.

The rule is, we don't close bugs until the patches have actually landed in drm-intel git repository.

However, Ville just pushed the patch to drm-intel-next-queued as

commit 187a1c07ec3c19d0c965f95741ed260bbc02040e
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Mon Apr 18 20:34:04 2016 +0300

    drm/i915: Fix oops in vlv_force_pll_on()
Comment 3 Marius Vlad 2016-04-19 13:59:44 UTC
Right, try not to haste it next time :-).


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.